--- a/chapter4.ipynb
+++ b/chapter4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNIuSCY1r40RdFkcHVgaBiU",
+      "authorship_tag": "ABX9TyOTEVs3f2jFOw6LmKNKtf1t",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -273,25 +273,28 @@
     {
       "cell_type": "code",
       "source": [
+        "def info():\n",
+        "  name = \"cherry\"\n",
+        "  age = 12\n",
+        "  grade = 'a'\n",
+        "  return name, age, grade\n",
         "\n",
-        "# Install git if not already installed\n",
-        "!pip install git\n"
+        "print(info())\n"
       ],
       "metadata": {
         "id": "svZneiqhhwf1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "652e6690-abba-4051-b48e-1bc9afb99849"
+        "outputId": "b421f65d-81c4-41c2-ea8d-e62878e75860"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Cloning into 'colab'...\n",
-            "fatal: could not read Username for 'https://github.com': No such device or address\n"
+            "('cherry', 12, 'a')\n"
           ]
         }
       ]
